# Trainingsplanner.Postgres/Data/Models/TrainingsModule.cs
@@ -12,7 +12,7 @@ namespace Trainingsplanner.Postgres.Data.Models
         public TrainingsDifficulty Difficulty { get; set; }
 
         public string UserId { get; set; }
-
+        public virtual ApplicationUser User { get; set; }
         public virtual ICollection<TrainingsModuleTrainingsExercise> TrainingsModulesTrainingsExercises { get; set; } =
             new List<TrainingsModuleTrainingsExercise>();
 
